fix submenu align in primary nav

--- a/dev/src/scss/_primary-menu.scss
+++ b/dev/src/scss/_primary-menu.scss
@@ -319,6 +319,9 @@
 		@media($md_lg) {
 			#primary-menu {
 				text-align: center;
+				.sub-menu { // ul
+					text-align: left;
+				}
 			}
 		}
 
